# litemq

./: .gitignore  CNAME  Cargo.toml  Dockerfile  Makefile  README.md  build.rs  go.mod  go.sum  integration_test.py  main.go  main.py  pyproject.toml  service.proto  service_grpc.py  service_pb2.py
.github/workflows/: ci.yml
cmd/litemq/: main.go
internal/: queue.go  server.go
internal/queues/: queue.go
internal/server/: grpc.go  queue.go  server.go
litemq/: client.py
src/: lib.rs  main.rs  queues.rs
tests/: basic_test.py  benchmark_test.py  concurrency_test.py  core.py  newline_test.py  persistence_test.py
